--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,5 +1,4 @@
 {
   "hero_header_1": "Discover Your Next",
-  "hero_header_2": "Great Read",
-  "home_test": "Home Test"
+  "hero_header_2": "Great Read"
 }
