--- a/locales/ja/home.json
+++ b/locales/ja/home.json
@@ -1,5 +1,4 @@
 {
-  "hero_header_1": "次を見つける",
-  "hero_header_2": "素晴らしい読書",
-  "home_test": "ホームテスト"
+  "hero_header_1": "次のお気に入りの一冊が",
+  "hero_header_2": "きっとここで見つかる"
 }
