--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -1,5 +1,4 @@
 {
   "hero_header_1": "Откройте для себя следующее",
-  "hero_header_2": "Отличное чтение",
-  "home_test": "Главная проверка"
+  "hero_header_2": "Отличное чтение"
 }
