--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,4 +1,15 @@
 {
+  "about_btn_explore": "Explore More",
+  "about_header_1": " For Every Reader,",
+  "about_header_2": "A Favourite Book!",
+  "about_p_1": "Our library is a place to explore knowledge, read great books, and discover new ideas. Whether you need study materials, want to enjoy stories, or just find a quiet space to read, our library is open for you.",
+  "about_span_1": "50K+",
+  "about_span_2": "Books Available",
+  "about_span_3": "1K+",
+  "about_span_4": "Registered Members",
+  "about_span_5": "24/7",
+  "about_span_6": "Online Access",
+  "available_books_header_2": "Available Books",
   "hero_btn_search": "Search",
   "hero_header_1": "Discover Your Next",
   "hero_header_2": "Great Read",
