--- a/locales/ja/home.json
+++ b/locales/ja/home.json
@@ -1,4 +1,15 @@
 {
+  "about_btn_explore": "もっと探る",
+  "about_header_1": "すべての読者のために、",
+  "about_header_2": "お気に入りの本！",
+  "about_p_1": "私たちの図書館は、知識を探求し、素晴らしい本を読み、新しいアイデアを発見する場所です。学習資料が必要な場合や、物語を楽しみたい場合、またはただ静かな読書スペースを見つけたい場合でも、私たちの図書館はあなたのために開かれています。",
+  "about_span_1": "50K+",
+  "about_span_2": "利用可能な本",
+  "about_span_3": "1K+",
+  "about_span_4": "登録メンバー",
+  "about_span_5": "24時間年中無休",
+  "about_span_6": "オンラインアクセス",
+  "available_books_header_2": "利用可能な本",
   "hero_btn_search": "検索",
   "hero_header_1": "次のお気に入りの一冊が",
   "hero_header_2": "きっとここで見つかる",
