--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -10,6 +10,10 @@
   "about_span_5": "24/7",
   "about_span_6": "Online Access",
   "available_books_header_2": "Available Books",
+  "footer_p_1": "Books, knowledge, and ideas all in one place. Visit our library to study, read, and grow your mind.",
+  "footer_p_2": "Made with",
+  "footer_p_name": "LibraryHub",
+  "footer_p_year": "2025",
   "hero_btn_search": "Search",
   "hero_header_1": "Discover Your Next",
   "hero_header_2": "Great Read",
