--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -10,6 +10,10 @@
   "about_span_5": "24/7",
   "about_span_6": "Онлайн доступ",
   "available_books_header_2": "Доступные книги",
+  "footer_p_1": "Книги, знания и идеи все в одном месте. Посетите нашу библиотеку, чтобы учиться, читать и развивать свой ум.",
+  "footer_p_2": "Сделано с",
+  "footer_p_name": "LibraryHub",
+  "footer_p_year": "2025",
   "hero_btn_search": "Поиск",
   "hero_header_1": "Откройте для себя следующее",
   "hero_header_2": "Отличное чтение",
