--- a/locales/ja/Home.json
+++ b/locales/ja/Home.json
@@ -13,6 +13,6 @@
   "hero_btn_search": "検索",
   "hero_header_1": "次のお気に入りの一冊が",
   "hero_header_2": "きっとここで見つかる",
-  "hero_p1": "何千冊もの本を閲覧し、お気に入りを予約し、すべてを一つの場所で読書の旅を管理します。",
+  "hero_p_1": "何千冊もの本を閲覧し、お気に入りを予約し、すべてを一つの場所で読書の旅を管理します。",
   "hero_placeholder_1": "タイトル、著者、またはISBNで検索..."
 }
