--- a/locales/ru/Home.json
+++ b/locales/ru/Home.json
@@ -13,6 +13,6 @@
   "hero_btn_search": "Поиск",
   "hero_header_1": "Откройте для себя следующее",
   "hero_header_2": "Отличное чтение",
-  "hero_p1": "Просматривайте тысячи книг, резервируйте свои любимые и управляйте своим чтением в одном месте.",
+  "hero_p_1": "Просматривайте тысячи книг, резервируйте свои любимые и управляйте своим чтением в одном месте.",
   "hero_placeholder_1": "Поиск по названию, автору или ISBN..."
 }
