--- a/locales/ru/ExtendReturn.json
+++ b/locales/ru/ExtendReturn.json
@@ -19,5 +19,8 @@
   "borrowed_status_extending": "Продление...",
   "borrowed_btn_extend": "Продлить",
   "borrowed_status_returning": "Возврат...",
-  "borrowed_btn_return": "Вернуть"
+  "borrowed_btn_return": "Вернуть",
+  "borrowed_auth_error": "Пользователь не авторизован",
+  "borrowed_role_error": "Только библиотекари могут просматривать список взятых книг",
+  "borrowed_fetch_fail": "Не удалось получить список взятых книг"
 }
