--- a/locales/en/Signin.json
+++ b/locales/en/Signin.json
@@ -1,4 +1,15 @@
 {
-  "sign_in_0": "Sign In",
-  "sign_in_1": "Enter your details to sign in to your account"
+  "signin_title": "Sign In",
+  "signin_prompt_enter_details": "Enter your details to sign in to your account",
+  "signin_label_email": "Email",
+  "signin_label_password": "Password",
+  "signin_text_no_account": "Don't have an account?",
+  "signin_success_message": "Signin successful!",
+  "signin_error_prefix": "Signin failed:",
+  "signup_error_missing_fields": "Missing Fields. Failed to Register",
+  "validation_password_min_length": "Password must be at least 6 characters",
+  "validation_password_max_length": "Password must be under 100 characters",
+  "validation_email_required": "Please enter your email address",
+  "validation_email_invalid": "Please enter a valid email address",
+  "signup_label": "Sign Up"
 }
