add localization for customer dashboard and fix japanese translation for home

--- a/locales/ja/Footer.json
+++ b/locales/ja/Footer.json
@@ -1,6 +1,6 @@
 {
-  "footer_p_1": "本、知識、アイデアがすべて一つの場所にあります。私たちの図書館を訪れて、学び、読み、心を成長させましょう。",
-  "footer_p_2": "作成された",
-  "footer_p_name": "ライブラリハブ",
+  "footer_p_1": "本、知識、アイデアがすべてここに。学び、読み、思考を深めるために、ぜひ図書館へお越しください。",
+  "footer_p_2": "愛を込めて作られました",
+  "footer_p_name": "LibraryHub",
   "footer_p_year": "2025"
 }
