--- a/locales/ja/Home.json
+++ b/locales/ja/Home.json
@@ -1,18 +1,18 @@
 {
-  "about_btn_explore": "もっと探る",
-  "about_header_1": "すべての読者のために、",
-  "about_header_2": "お気に入りの本！",
-  "about_p_1": "私たちの図書館は、知識を探求し、素晴らしい本を読み、新しいアイデアを発見する場所です。学習資料が必要な場合や、物語を楽しみたい場合、またはただ静かな読書スペースを見つけたい場合でも、私たちの図書館はあなたのために開かれています。",
-  "about_span_1": "50K+",
+  "about_btn_explore": "詳しく見る",
+  "about_header_1": "すべての読者へ",
+  "about_header_2": "お気に入りの一冊！",
+  "about_p_1": "私たちの図書館は、知識を探求し、素晴らしい本を読み、新しいアイデアに出会える場所です。勉強のための資料が必要なときも、物語を楽しみたいときも、静かな読書スペースを見つけたいときも、図書館はいつでもあなたを歓迎します。",
+  "about_span_1": "5万冊以上",
   "about_span_2": "利用可能な本",
-  "about_span_3": "1K+",
-  "about_span_4": "登録メンバー",
-  "about_span_5": "24時間年中無休",
-  "about_span_6": "オンラインアクセス",
+  "about_span_3": "1,000",
+  "about_span_4": "人以上の登録メンバー",
+  "about_span_5": "24時間年中無休で",
+  "about_span_6": "オンライン利用可能",
   "available_books_header_2": "利用可能な本",
   "hero_btn_search": "検索",
   "hero_header_1": "次のお気に入りの一冊が",
   "hero_header_2": "きっとここで見つかる",
-  "hero_p_1": "何千冊もの本を閲覧し、お気に入りを予約し、すべてを一つの場所で読書の旅を管理します。",
-  "hero_placeholder_1": "タイトル、著者、またはISBNで検索..."
+  "hero_p_1": "豊富なコレクションの中からお気に入りを予約。読書の旅をここから始めましょう。",
+  "hero_placeholder_1": "タイトル、著者名、またはISBNで検索..."
 }
