Fix variable name

--- a/locales/ru/customer_dashboard.json
+++ b/locales/ru/customer_dashboard.json
@@ -9,7 +9,7 @@
   "dashboard_button_delete_account": "Удаление аккаунта",
   "dashboard_section_my_books": "Мои книги",
   "dashboard_loading_reservations": "Загрузка бронирований...",
-  "dashboard_table_title": "название",
+  "dashboard_table_title": "Название",
   "dashboard_table_author": "Автор",
   "dashboard_table_borrowed": "Заимствовано",
   "dashboard_table_due": "Срок",
