--- a/locales/en/Penalties.json
+++ b/locales/en/Penalties.json
@@ -36,5 +36,7 @@
   "restrictedNotice": "⚠️ Restricted:",
   "returnOverdueToContinue": "Return overdue books to continue borrowing",
   "loadReservationFail": "Failed to load reservation status",
-  "noOverdueBooks": "✓ No overdue books"
+  "noOverdueBooks": "✓ No overdue books",
+  "processedPrefix": "Processed",
+  "processedSuffix": "overdue books"
 }
