--- a/locales/ru/NavBar.json
+++ b/locales/ru/NavBar.json
@@ -2,7 +2,7 @@
   "nav_btn_log_out": "Выйти",
   "nav_btn_sign_in": "Войти",
   "nav_link_private": "Частный",
-  "nav_name": "Библиотечный центр",
+  "nav_name": "LibraryHub",
   "nav_search_label": "Поиск",
-  "nav_search_placeholder": "Поиск по заголовку, автору или категориям..."
+  "nav_search_placeholder": "Поиск по заголовку, автору, категории..."
 }
