--- a/locales/ru/Footer.json
+++ b/locales/ru/Footer.json
@@ -1,6 +1,6 @@
 {
   "footer_p_1": "Книги, знания и идеи все в одном месте. Посетите нашу библиотеку, чтобы учиться, читать и развивать свой ум.",
   "footer_p_2": "Сделано с",
-  "footer_p_name": "Библиотечный центр",
+  "footer_p_name": "LibraryHub",
   "footer_p_year": "2025"
 }
