--- a/locales/ja/Penalties.json
+++ b/locales/ja/Penalties.json
@@ -36,7 +36,11 @@
   "restrictedNotice": "⚠️ 制限:",
   "returnOverdueToContinue": "延滞本を返却してから貸出を続けてください",
   "loadReservationFail": "予約状況の読み込みに失敗しました",
+  "loading_status": "読み込み中...",
+  "error": "エラー: ",
   "noOverdueBooks": "✓ 延滞本はありません",
   "processedPrefix": "処理済み",
-  "processedSuffix": "件の延滞本"
+  "processedSuffix": "件の延滞本",
+  "processedSuffix_2": "件の延滞本",
+  "s": "（複数）"
 }
