Update ru language translates

--- a/locales/ru/customer_dashboard.json
+++ b/locales/ru/customer_dashboard.json
@@ -39,10 +39,10 @@
   "dashboard_error_return_failed": "Не удалось вернуть книгу. Попробуйте снова",
   "dashboard_success_returned": "Книга успешно возвращена",
   "dashboard_loading_extending": "Продление...",
-  "dashboard_status_extended_label": "Продлено",
-  "dashboard_button_extend_action": "Продлить",
+  "dashboard_status_extended_label": "продлено",
+  "dashboard_button_extend_action": "продлить",
   "dashboard_loading_returning": "Возврат...",
-  "dashboard_button_return_action": "Вернуть",
+  "dashboard_button_return_action": "вернуть",
   "dashboard_status_active_capital": "Активен",
   "dashboard_status_inactive": "Неактивен",
   "dashboard_label_new_email": "Новый адрес эл. почты",
