--- a/locales/ja/signup.json
+++ b/locales/ja/signup.json
@@ -23,5 +23,6 @@
   "signup_validation_password_max_length": "パスワードは100文字以内で入力してください",
   "signup_validation_email_required": "メールアドレスを入力してください",
   "signup_validation_email_invalid": "有効なメールアドレスを入力してください",
-  "signup_signin_link": "サインイン"
+  "signup_signin_link": "サインイン",
+  "signup_placeholder_email": "名前@例え.com"
 }
