--- a/locales/ru/customer_dashboard.json
+++ b/locales/ru/customer_dashboard.json
@@ -40,9 +40,9 @@
   "dashboard_success_returned": "Книга успешно возвращена",
   "dashboard_loading_extending": "Продление...",
   "dashboard_status_extended_label": "продлено",
-  "dashboard_button_extend_action": "продлить",
+  "dashboard_button_extend_action": "Продлить",
   "dashboard_loading_returning": "Возврат...",
-  "dashboard_button_return_action": "вернуть",
+  "dashboard_button_return_action": "Вернуть",
   "dashboard_status_active_capital": "Активен",
   "dashboard_status_inactive": "Неактивен",
   "dashboard_label_new_email": "Новый адрес эл. почты",
