--- a/locales/ru/ExtendReturn.json
+++ b/locales/ru/ExtendReturn.json
@@ -15,7 +15,7 @@
   "borrowed_col_extend": "Продлить",
   "borrowed_col_return": "Вернуть",
   "borrowed_by": "от",
-  "borrowed_status_extended": "продлено",
+  "borrowed_status_extended": "Продлено",
   "borrowed_status_extending": "Продление...",
   "borrowed_btn_extend": "Продлить",
   "borrowed_status_returning": "Возврат...",
